// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Graph should render with data 1`] = `
.c5 {
  fill: none;
  stroke: #999;
  stroke-width: 2px;
  -webkit-transition: all 0.3s cubic-bezier(.25,.8,.25,1);
  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
}

.c6 {
  fill: #999;
}

.c1 {
  position: absolute;
  background: #FFFFFF;
  border: solid 2px rgba(0,0,0,0.3);
  box-shadow: 0 0 5px 1px rgba(0,0,0,0.15);
  border-radius: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 16px;
  width: 32px;
  height: 50px;
  font-size: calc(1rem * 1);
  box-sizing: border-box;
  left: 100px;
  top: 0px;
  cursor: pointer;
  -webkit-transition: all 0.3s cubic-bezier(.25,.8,.25,1);
  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
  z-index: 1;
}

.c3 {
  position: absolute;
  background: #FFFFFF;
  border: solid 2px rgba(0,0,0,0.3);
  box-shadow: 0 0 5px 1px rgba(0,0,0,0.15);
  border-radius: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 16px;
  width: 32px;
  height: 50px;
  font-size: calc(1rem * 1);
  box-sizing: border-box;
  left: 100px;
  top: 100px;
  cursor: pointer;
  -webkit-transition: all 0.3s cubic-bezier(.25,.8,.25,1);
  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
  z-index: 1;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 100%;
}

.c0 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.c4 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

<div
  class=""
  style="height:150px;width:255.20000000000002px;position:relative;margin:auto"
>
  <div
    class="c0"
  >
    <div
      class="c1"
      scale="1"
    >
      <div
        class="c2"
      >
        node-0
      </div>
    </div>
    <div
      class="c3"
      scale="1"
    >
      <div
        class="c2"
      >
        node-1
      </div>
    </div>
  </div>
  <svg
    class="c4"
    style="height:150px;width:255.20000000000002px"
  >
    <g>
      <path
        class="c5"
        d="M116,50L116,75L116,100"
      />
      <polygon
        class="c6"
        height="8"
        points="116,100 112.5,92 119.5,92"
        transform="rotate(0 116 100)"
        width="7"
        x="116"
        y="100"
      />
    </g>
  </svg>
</div>
`;

exports[`Graph should render with just one node 1`] = `
.c0 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.c1 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

<div
  class=""
  style="height:0;width:0;position:relative;margin:auto"
>
  <div
    class="c0"
  />
  <svg
    class="c1"
    style="height:0;width:0"
  />
</div>
`;

exports[`Graph should render without data 1`] = `
<p>
  No Data
</p>
`;

exports[`Graph should select edges 1`] = `
.c5 {
  fill: none;
  stroke: #657fcc;
  stroke-width: 2px;
  -webkit-transition: all 0.3s cubic-bezier(.25,.8,.25,1);
  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
}

.c6 {
  fill: #657fcc;
}

.c1 {
  position: absolute;
  background: #FFFFFF;
  border: solid 2px rgba(0,0,0,0.3);
  box-shadow: 0 0 5px 1px rgba(0,0,0,0.15);
  border-radius: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 16px;
  width: 32px;
  height: 50px;
  font-size: calc(1rem * 1);
  box-sizing: border-box;
  left: 100px;
  top: 0px;
  cursor: pointer;
  -webkit-transition: all 0.3s cubic-bezier(.25,.8,.25,1);
  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
  z-index: 1;
}

.c3 {
  position: absolute;
  background: #FFFFFF;
  border: solid 2px rgba(0,0,0,0.3);
  box-shadow: 0 0 5px 1px rgba(0,0,0,0.15);
  border-radius: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 16px;
  width: 32px;
  height: 50px;
  font-size: calc(1rem * 1);
  box-sizing: border-box;
  left: 100px;
  top: 100px;
  cursor: pointer;
  -webkit-transition: all 0.3s cubic-bezier(.25,.8,.25,1);
  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
  z-index: 1;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 100%;
}

.c0 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.c4 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

<div
  class=""
  style="height:150px;width:255.20000000000002px;position:relative;margin:auto"
>
  <div
    class="c0"
  >
    <div
      class="c1"
      scale="1"
    >
      <div
        class="c2"
      >
        node-0
      </div>
    </div>
    <div
      class="c3"
      scale="1"
    >
      <div
        class="c2"
      >
        node-1
      </div>
    </div>
  </div>
  <svg
    class="c4"
    style="height:150px;width:255.20000000000002px"
  >
    <g>
      <path
        class="c5"
        d="M116,50L116,75L116,100"
      />
      <polygon
        class="c6"
        height="8"
        points="116,100 112.5,92 119.5,92"
        transform="rotate(0 116 100)"
        width="7"
        x="116"
        y="100"
      />
    </g>
  </svg>
</div>
`;

exports[`Graph should select edges with color 1`] = `
.c5 {
  fill: none;
  stroke: red;
  stroke-width: 2px;
  -webkit-transition: all 0.3s cubic-bezier(.25,.8,.25,1);
  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
}

.c6 {
  fill: red;
}

.c1 {
  position: absolute;
  background: #FFFFFF;
  border: solid 2px rgba(0,0,0,0.3);
  box-shadow: 0 0 5px 1px rgba(0,0,0,0.15);
  border-radius: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 16px;
  width: 32px;
  height: 50px;
  font-size: calc(1rem * 1);
  box-sizing: border-box;
  left: 100px;
  top: 0px;
  cursor: pointer;
  -webkit-transition: all 0.3s cubic-bezier(.25,.8,.25,1);
  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
  z-index: 1;
}

.c3 {
  position: absolute;
  background: #FFFFFF;
  border: solid 2px rgba(0,0,0,0.3);
  box-shadow: 0 0 5px 1px rgba(0,0,0,0.15);
  border-radius: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 16px;
  width: 32px;
  height: 50px;
  font-size: calc(1rem * 1);
  box-sizing: border-box;
  left: 100px;
  top: 100px;
  cursor: pointer;
  -webkit-transition: all 0.3s cubic-bezier(.25,.8,.25,1);
  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
  z-index: 1;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 100%;
}

.c0 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.c4 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

<div
  class=""
  style="height:150px;width:255.20000000000002px;position:relative;margin:auto"
>
  <div
    class="c0"
  >
    <div
      class="c1"
      scale="1"
    >
      <div
        class="c2"
      >
        node-0
      </div>
    </div>
    <div
      class="c3"
      scale="1"
    >
      <div
        class="c2"
      >
        node-1
      </div>
    </div>
  </div>
  <svg
    class="c4"
    style="height:150px;width:255.20000000000002px"
  >
    <g>
      <path
        class="c5"
        d="M116,50L116,75L116,100"
      />
      <polygon
        class="c6"
        height="8"
        points="116,100 112.5,92 119.5,92"
        transform="rotate(0 116 100)"
        width="7"
        x="116"
        y="100"
      />
    </g>
  </svg>
</div>
`;

exports[`Graph should select nodes 1`] = `
.c5 {
  fill: none;
  stroke: #999;
  stroke-width: 2px;
  -webkit-transition: all 0.3s cubic-bezier(.25,.8,.25,1);
  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
}

.c6 {
  fill: #999;
}

.c3 {
  position: absolute;
  background: #FFFFFF;
  border: solid 2px rgba(0,0,0,0.3);
  box-shadow: 0 0 5px 1px rgba(0,0,0,0.15);
  border-radius: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 16px;
  width: 32px;
  height: 50px;
  font-size: calc(1rem * 1);
  box-sizing: border-box;
  left: 100px;
  top: 100px;
  cursor: pointer;
  -webkit-transition: all 0.3s cubic-bezier(.25,.8,.25,1);
  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
  z-index: 1;
}

.c1 {
  position: absolute;
  background: #FFFFFF;
  border: solid 2px #3956ac;
  box-shadow: 0 0 5px 1px rgba(57,86,172,0.5);
  border-radius: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 16px;
  width: 32px;
  height: 50px;
  font-size: calc(1rem * 1);
  box-sizing: border-box;
  left: 100px;
  top: 0px;
  cursor: pointer;
  -webkit-transition: all 0.3s cubic-bezier(.25,.8,.25,1);
  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
  z-index: 1;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 100%;
}

.c0 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.c4 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

<div
  class=""
  style="height:150px;width:255.20000000000002px;position:relative;margin:auto"
>
  <div
    class="c0"
  >
    <div
      class="c1"
      scale="1"
    >
      <div
        class="c2"
      >
        node-0
      </div>
    </div>
    <div
      class="c3"
      scale="1"
    >
      <div
        class="c2"
      >
        node-1
      </div>
    </div>
  </div>
  <svg
    class="c4"
    style="height:150px;width:255.20000000000002px"
  >
    <g>
      <path
        class="c5"
        d="M116,50L116,75L116,100"
      />
      <polygon
        class="c6"
        height="8"
        points="116,100 112.5,92 119.5,92"
        transform="rotate(0 116 100)"
        width="7"
        x="116"
        y="100"
      />
    </g>
  </svg>
</div>
`;

exports[`Graph should select nodes with color 1`] = `
.c5 {
  fill: none;
  stroke: #999;
  stroke-width: 2px;
  -webkit-transition: all 0.3s cubic-bezier(.25,.8,.25,1);
  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
}

.c6 {
  fill: #999;
}

.c3 {
  position: absolute;
  background: #FFFFFF;
  border: solid 2px rgba(0,0,0,0.3);
  box-shadow: 0 0 5px 1px rgba(0,0,0,0.15);
  border-radius: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 16px;
  width: 32px;
  height: 50px;
  font-size: calc(1rem * 1);
  box-sizing: border-box;
  left: 100px;
  top: 100px;
  cursor: pointer;
  -webkit-transition: all 0.3s cubic-bezier(.25,.8,.25,1);
  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
  z-index: 1;
}

.c1 {
  position: absolute;
  background: #FFFFFF;
  border: solid 2px red;
  box-shadow: 0 0 5px 1px rgba(255,0,0,0.5);
  border-radius: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 16px;
  width: 32px;
  height: 50px;
  font-size: calc(1rem * 1);
  box-sizing: border-box;
  left: 100px;
  top: 0px;
  cursor: pointer;
  -webkit-transition: all 0.3s cubic-bezier(.25,.8,.25,1);
  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
  z-index: 1;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 100%;
}

.c0 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.c4 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

<div
  class=""
  style="height:150px;width:255.20000000000002px;position:relative;margin:auto"
>
  <div
    class="c0"
  >
    <div
      class="c1"
      scale="1"
    >
      <div
        class="c2"
      >
        node-0
      </div>
    </div>
    <div
      class="c3"
      scale="1"
    >
      <div
        class="c2"
      >
        node-1
      </div>
    </div>
  </div>
  <svg
    class="c4"
    style="height:150px;width:255.20000000000002px"
  >
    <g>
      <path
        class="c5"
        d="M116,50L116,75L116,100"
      />
      <polygon
        class="c6"
        height="8"
        points="116,100 112.5,92 119.5,92"
        transform="rotate(0 116 100)"
        width="7"
        x="116"
        y="100"
      />
    </g>
  </svg>
</div>
`;
